# fox-flux-advance

./: Cargo.toml  Makefile  README.md  png-to-tiles.py
assets/: lexy.aseprite  palette.pal  tiles.aseprite
build-stuff/: png-to-tiles.py
build-stuff/gba/: linker.ld  thumbv4-none-agb.json
src/: debug.rs  fixed.rs  geom.rs  main.rs
src/data/: mod.rs  places.rs
src/whammo/: mod.rs  shapes.rs
