[package]
name = "fox-flux-advance"
version = "0.1.0"
authors = ["Eevee (Evelyn Woods) <eevee.git@veekun.com>"]
edition = "2018"

[dependencies]
gba = "^0.3.0"

[dependencies.num-traits]
version = "^0.2"
default-features = false

[dependencies.euclid]
git = "https://github.com/servo/euclid"
branch = "no-std"
default-features = false
